# discord-soundboard-bot

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  TESTING.md  docker-compose.yml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build.yaml  lint.yaml  test.yaml
backend/: Cargo.toml  Rocket.toml
backend/migrations/2021-01-22-190245_create_users/: up.sql
backend/migrations/2021-01-23-110157_create_guildsettings/: up.sql
backend/migrations/2021-01-24-102829_create_randominfixes/: down.sql  up.sql
backend/migrations/2021-01-26-184228_create_authtokens/: down.sql  up.sql
backend/migrations/2021-01-26-201959_create_sounds/: up.sql
backend/migrations/2021-01-26-214847_create_soundfile/: down.sql  up.sql
backend/src/: audio_utils.rs  file_handling.rs  main.rs  traits.rs
backend/src/api/: auth.rs  commands.rs  discord.rs  events.rs  mod.rs  recorder.rs  settings.rs  sound_browser.rs  sounds.rs  utils.rs
backend/src/db/: mod.rs  models.rs  schema.rs
backend/src/discord/: client.rs  commands.rs  connector.rs  management.rs  mod.rs  player.rs  recorder.rs
backend/tests/: permissions_test.rs  recording_test.rs  sound_playback_test.rs
backend/tests/common/: mod.rs
frontend/: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  TESTING.md  angular.json  eslint.config.mjs  karma.conf.js  package-lock.json  package.json  playwright.config.ts  proxy.config.js  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  tslint.json  vitest.config.ts
frontend/.husky/: pre-commit
frontend/e2e/: soundboard.spec.ts
frontend/e2e/fixtures/: test-helpers.ts
frontend/e2e/mocks/: handlers.ts
frontend/e2e/src/: app.e2e-spec.ts
frontend/src/: index.html  main.ts  polyfills.ts  styles.scss  test-setup.ts  typings.d.ts
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.config.ts  app.module.ts  app.routes.ts  event-description.pipe.ts  guild-name.pipe.ts
frontend/src/app/common/: event-description.pipe.ts  guild-name.pipe.ts  scroll-into-view.directive.ts
frontend/src/app/common/data-load/: data-load-error.component.ts  data-load.directive.ts
frontend/src/app/common/footer/: footer.component.html  footer.component.scss  footer.component.ts
frontend/src/app/common/header/: header.component.html  header.component.ts
frontend/src/app/data-load/: data-load-error.component.ts  data-load.directive.ts
frontend/src/app/error-box/: error-box.component.html  error-box.component.scss  error-box.component.ts
frontend/src/app/footer/: footer.component.html  footer.component.scss  footer.component.ts
frontend/src/app/guards/: guild-permission.guard.ts  not-logged-in.guard.ts
frontend/src/app/header/: header.component.html  header.component.scss  header.component.ts
frontend/src/app/keybind-generator/: keybind-generator.component.html  keybind-generator.component.scss  keybind-generator.component.ts
frontend/src/app/login/: login.component.html  login.component.scss  login.component.ts
frontend/src/app/pages/login/: login.component.html  (+2 more)
frontend/src/app/recorder/: recorder.component.html  recorder.component.scss  recorder.component.ts
frontend/src/app/resolvers/: user.resolver.ts
frontend/src/app/services/: api.service.ts  app-info.state.ts  app-settings.service.ts  auth-interceptor.service.ts  auth-interceptor.ts  error.service.ts  events.service.ts  guild-settings.service.ts  login.service.ts  recorder.service.ts  settings.service.ts  sounds.service.spec.ts  sounds.service.ts
frontend/src/app/settings/: settings.component.html  settings.component.scss  settings.component.ts
frontend/src/app/soundboard/: soundboard.component.html  soundboard.component.scss  soundboard.component.ts
frontend/src/app/state/: app-info.state.ts
frontend/src/app/volume-slider/: volume-slider.component.html  volume-slider.component.scss  volume-slider.component.ts
frontend/src/styles/: _variables.scss  overrides.scss
(+79 files in other folders)
