[package]
name = "discord-soundboard-bot"
version = "0.4.0"
authors = ["Dominik Kus <dominik@kus.software>"]
edition = "2021"

[dependencies]
bigdecimal = "0.4"
chrono = "=0.4.38"
diesel = { version = "2.3", default-features = false, features = ["postgres", "numeric"] }
diesel_migrations = "2.3"
dotenv = "0.15"
lazy_static = "1.4"
oauth2 = "5.0"
rand = "0.8"
regex = "1.12"
reqwest = { version = "0.13", features = ["json"] }
rocket = { version = "=0.5.0-rc.3", features = ["secrets", "json"] }
rocket_sync_db_pools = { version = "=0.1.0-rc.3", features = ["diesel_postgres_pool"] }
sanitize-filename = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_with = "3.3"
serenity = { version = "0.12", features = ["cache", "standard_framework", "voice", "voice_model", "rustls_backend"] }
songbird = { version = "0.5", features = ["driver", "gateway", "builtin-queue", "receive"] }
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "macros", "process"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Needed for Diesel Postgres linking for MUSL
# https://github.com/emk/rust-musl-builder#making-diesel-work
openssl = "*"

[patch.crates-io]
serde-aux = { git = "https://github.com/vityafx/serde-aux" }
