[package]
name = "discord-soundboard-bot"
version = "0.4.0"
authors = ["Dominik Kus <dominik@kus.software>"]
edition = "2021"

[dependencies]
bigdecimal = "0.4"
diesel = { version = "2.2", default-features = false, features = ["postgres", "numeric"] }
diesel_migrations = "2.2"
dotenv = "0.15"
oauth2 = "5.0"
rand = "0.9"
regex = "1.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rocket = { version = "0.5.1", features = ["secrets", "json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
sanitize-filename = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_with = "3.3"
serenity = { version = "0.12", features = ["cache", "standard_framework", "voice", "voice_model", "rustls_backend"] }
songbird = { version = "0.5", default-features = false, features = ["driver", "gateway", "serenity", "rustls", "receive", "tungstenite"] }
symphonia = { version = "0.5", features = ["mp3"] }
thiserror = "2.0"
tokio = { version = "1.32", features = ["rt", "rt-multi-thread", "macros", "process"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Use bundled postgres for diesel (without openssl)
pq-sys = { version = "0.7", default-features = false, features = ["bundled_without_openssl"] }

